fix: :lipstick: Change max-width for third item list on tablet
Change max-witdth for third list item on tablet

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3655,7 +3655,7 @@
 
         @media screen and (min-width: 768px) {
             &:nth-child(3) {
-                max-width: 40ch;
+                max-width: 35ch;
             }
 
             &:last-child {
@@ -3676,7 +3676,7 @@
             }
 
             &:last-child {
-                max-width: 20ch;
+                max-width: 22ch;
             }
         }
 
@@ -3684,6 +3684,10 @@
         @media screen and (min-width: 1000px) {
             &:nth-child(2) {
                 max-width: unset;
+            }
+
+            &:nth-child(3) {
+                max-width: 37ch;
             }
 
             &:last-child {
